# snar_hw5

./: README.md
catkin_ws/devel/: .catkin  local_setup.sh
catkin_ws/devel/include/robot_pkg/: Encoders.h
catkin_ws/devel/lib/pkgconfig/: robot_pkg.pc
catkin_ws/devel/lib/python3/dist-packages/robot_pkg/msg/: _Encoders.py  __init__.py
catkin_ws/devel/share/common-lisp/ros/robot_pkg/msg/: Encoders.lisp  _package.lisp  _package_Encoders.lisp  robot_pkg-msg.asd
catkin_ws/devel/share/gennodejs/ros/robot_pkg/msg/: Encoders.js  _index.js
catkin_ws/devel/share/robot_pkg/cmake/: robot_pkg-msg-extras.cmake  robot_pkg-msg-paths.cmake  robot_pkgConfig.cmake
catkin_ws/devel/share/roseus/ros/robot_pkg/: manifest.l
catkin_ws/devel/share/roseus/ros/robot_pkg/msg/: Encoders.l
catkin_ws/src/robot_pkg/: CMakeLists.txt  package.xml
catkin_ws/src/robot_pkg/msg/: Encoders.msg
catkin_ws/src/robot_pkg/scripts/: control.py
